13318
I have two files, deathname.scala and unrelated.scala.

The first is empty. The second is unrelated to the first, except it has an inner object that defines a method that happens to be called "deathname". Running the second crashes the compiler.
```scala
jorge-ortizs-macbook-pro:crash jeortiz$$ scala deathname.scala 
jorge-ortizs-macbook-pro:crash jeortiz$$ scala unrelated.scala 
/Users/jeortiz/Documents/cs94si/crash/deathname.scala:1: error: expected class or object definition
()
^
java.lang.AssertionError: assertion failed
	at scala.Predef$$.assert(Predef.scala:87)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2890)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3167)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3204)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$2.apply(Analyzer.scala:40)
	at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:247)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
	at scala.Iterator$$class.foreach(Iterator.scala:387)
	at scala.collection.mutable.ListBuffer$$$$anon$$1.foreach(ListBuffer.scala:255)
	at scala.tools.nsc.Global$$GlobalPhase.run(Global.scala:233)
	at scala.tools.nsc.Global$$Run.compileSources(Global.scala:545)
	at scala.tools.nsc.Global$$Run.compile(Global.scala:629)
	at scala.tools.nsc.StandardCompileServer.session(CompileServer.scala:137)
	at scala.tools.util.SocketServer$$$$anonfun$$run$$1.apply(SocketServer.scala:69)
	at scala.tools.util.SocketServer$$$$anonfun$$run$$1.apply(SocketServer.scala:69)
	at scala.util.DynamicVariable.withValue(DynamicVariable.scala:73)
	at scala.Console$$.withOut(Console.scala:84)
	at scala.Console$$.withOut(Console.scala:102)
	at scala.tools.util.SocketServer.run(SocketServer.scala:68)
	at scala.tools.nsc.StandardCompileServer.main(CompileServer.scala:179)
	at scala.tools.nsc.CompileServer.main(CompileServer.scala)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:39)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:25)
	at java.lang.reflect.Method.invoke(Method.java:585)
	at scala.tools.nsc.ObjectRunner$$$$anonfun$$run$$1.apply(ObjectRunner.scala:75)
	at scala.tools.nsc.ObjectRunner$$.withContextClassLoader(ObjectRunner.scala:49)
	at scala.tools.nsc.ObjectRunner$$.run(ObjectRunner.scala:74)
	at scala.tools.nsc.MainGenericRunner$$.main(MainGenericRunner.scala:161)
	at scala.tools.nsc.MainGenericRunner.main(MainGenericRunner.scala)
error: fatal error (server aborted): assertion failed
two errors found
jorge-ortizs-macbook-pro:crash jeortiz$$ 
```

See attached files.
